# sandbox

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/520-love-page/: index.html
articles/: ai-agent-k8s-troubleshooting-en.md  ai-agent-k8s-troubleshooting.md
claude-analysis/: index.html  jest.config.ts  package-lock.json  package.json  push_to_github.py  tsconfig.test.json
claude-analysis/src/: App.tsx  index.css  setupTests.ts
claude-analysis/src/__tests__/: MarkdownRenderer.test.tsx  SideNav.test.tsx  helpers.test.ts
claude-analysis/src/components/: ArchFlowDiagram.tsx  ArchitectureDiagram.tsx  HeroSection.tsx  Layout.tsx  MarkdownRenderer.tsx  SideNav.tsx
claude-analysis/src/content/: ArchitectureContent.tsx  ModulesContent.tsx  TechStackContent.tsx
claude-analysis/src/utils/: helpers.ts
confluence-page-mcp/: .env.example  README.md  pyproject.toml  requirements.txt
confluence-page-mcp/src/confluence_page_mcp/: __init__.py  confluence_client.py  markdown_converter.py  server.py
docs/: architecture-analysis.md
fraud-detection/: README.md  pom.xml
fraud-detection/fraud-detection/scripts/: generate_30d_data.py
fraud-detection/proto/: fraud_detection.proto
fraud-detection/scripts/: generate_dummy_data.py
infrastructure/: .env.example  docker-compose.yml
models/: fraud_model.onnx  train_dummy_model.py
scripts/: start-services.sh  stop-services.sh
services/: .dockerignore  mvnw  pom.xml
services/user-service/: Dockerfile  pom.xml
services/verification-service/: Dockerfile  pom.xml
(+62 files in other folders)
